--- a/css/src/main.scss
+++ b/css/src/main.scss
@@ -19,7 +19,7 @@ $bp-xl: 1150px;
 
 
 // import layout components
-@import "header", "showcase", "content", "footer";
+@import "header", "showcase", "content", "sidebar", "footer";
 
 
 // import lightbox styles
