--- a/css/src/_content.scss
+++ b/css/src/_content.scss
@@ -99,5 +99,21 @@
 		padding-top: 40px;
 		padding-bottom: 60px;
 	}
+
+	.quarter, .three-quarter {
+		padding: 0;
+	}
+
+	@include respond-to( 768px ) {
+		.quarter {
+			width: 23%;
+			margin: 0 2% 0 0;
+		}
+
+		.three-quarter {
+			width: 75%;
+			margin: 0;
+		}
+	}
 }
 
