Adjust button styles, ensuring that the padding is uniform.

--- a/css/src/_button.scss
+++ b/css/src/_button.scss
@@ -10,7 +10,7 @@
 	@include font;
 	opacity: 1;
 	border: 0;
-	padding: 10px 15px 12px;
+	padding: 10px 15px;
 	font-size: 17px;
 	line-height: 20px;
 	text-transform: uppercase;
