Remove iOS button styles.

--- a/css/src/_button.scss
+++ b/css/src/_button.scss
@@ -21,6 +21,8 @@
 	text-align: center;
 	background-color: $grey;
 	color: white;
+	-webkit-appearance: none;
+	border-radius: 0;
 
 	&:hover {
 		text-decoration: none;
