--- a/css/src/_sidebar.scss
+++ b/css/src/_sidebar.scss
@@ -9,10 +9,13 @@
 	.widget-title {
 		font-size: 1em;
 		line-height: 1em;
-		padding: 3px 12px;
+		padding: 3px;
+		border-bottom: 3px solid #ddd;
 	}
 
 	.widget_nav_menu {
+		padding-bottom: 25px;
+
 		ul {
 			list-style: none;
 			padding: 0;
@@ -22,11 +25,14 @@
 
 				a {
 					display: block;
-					padding: 4px 12px;
+					padding: 4px;
+					border-bottom: 3px solid #eee;
+					color: #666;
+					transition: color 400ms ease-in-out;
 
 					&:hover {
-						background-color: #eee;
 						text-decoration: none;
+						color: $green;
 					}
 				}
 			}
