Make sure our responsive sass is using the breakpoint variables where possible.

--- a/css/src/_grid.scss
+++ b/css/src/_grid.scss
@@ -4,7 +4,7 @@
 	padding: 20px;
 }
 
-@include respond-to( 768px ) {
+@include respond-to( $bp-m ) {
 	.quarter, .third, .half, .two-third, .three-quarter, .twenty, .forty, .thirty {
 		float: left;
 	}
