--- a/css/src/_base.scss
+++ b/css/src/_base.scss
@@ -9,7 +9,7 @@ body {
 	font-size: 14px;
 	line-height: 100%;
 
-	@include respond-to( 768px ) {
+	@include respond-to( $bp-m ) {
 		font-size: 16px;
 		line-height: 100%;
 	}
@@ -45,7 +45,7 @@ h4 {
 p {
 	padding: 8px 0;
 
-	@include respond-to( 768px ) {
+	@include respond-to( $bp-m ) {
 		padding: 12px 0;
 	}
 }
@@ -111,7 +111,7 @@ pre {
 	background: lighten( $grey, 35% );
 	@include font;
 
-	@include respond-to( 768px ) {
+	@include respond-to( $bp-m ) {
 		padding: 40px 0;
 	}
 
