--- a/css/src/_content.scss
+++ b/css/src/_content.scss
@@ -95,7 +95,7 @@
 	@extend .content-style;
 	@include padding;
 
-	@include respond-to( 1220px ) {
+	@include respond-to( $bp-xl ) {
 		padding-top: 40px;
 		padding-bottom: 60px;
 	}
@@ -104,7 +104,7 @@
 		padding: 0;
 	}
 
-	@include respond-to( 768px ) {
+	@include respond-to( $bp-m ) {
 		.quarter {
 			width: 23%;
 			margin: 0 2% 0 0;
