I misspelled my name, y'all. It's that bad.

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
 Theme Name: Pure Framework
-Author: James Pederosn
+Author: James Pederson
 Author URI: https://jpederson.com
 Description: A wordpress theme framework using composer, npm, and sass.
 Version: 1.0
